# scorefinder

./: .env.example  .gitignore  .scorefinder.example  DEVELOPMENT.md  QUICKSTART.md  README.md  USAGE.md  failed_urls.txt  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
scorefinder/: __init__.py  app.py  cli.py  config.py  converter.py  downloader.py  launcher.py  search.py  verifier.py
tests/: test_basic.py
