[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorefinder"
version = "0.1.0"
description = "Find and convert drum notation using Google Gemini and Google Search"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Dave McKay" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Musicians",
  "Topic :: Multimedia :: Sound/Audio",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "google-generativeai>=0.3.0",
  "google-api-python-client>=2.100.0",
  "python-dotenv>=1.0.0",
  "music21>=9.1.0",
  "mido>=1.3.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "click>=8.1.0",
  "colorama>=0.4.6"
]

[project.urls]
Homepage = "https://github.com/davedavemckay/scorefinder"

[project.scripts]
scorefinder = "scorefinder.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scorefinder*"]